...

                <ThemedText type="default" style={styles.descriptionText}>
                    {currentStep.description}
                </ThemedText>
            </Animated.View>

            <Pressable testID="onboarding-next-button" onPress={handleArrowPress} style={styles.arrowContainer}>
                <Image
                    source={require('@/assets/images/arrow-right.png')}
                    style={styles.arrow}
                    contentFit="contain"
                />
            </Pressable>
...
